# ChangeLog for dev-ruby/railroad
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> -railroad-0.4.0.ebuild:
  Remove old version.

  16 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump
