@@ -1,14 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST railroad-0.5.0.gem 18944 RMD160 93f2004ffdcc269abc663a5778efbe2cfe2aba64 SHA1 e73c3a13d71e9a935eacc820520ee142b339e8b9 SHA256 716a10d3d520879e9e9293e0077137138e2f53acffae16118d42a988868978c7
+EBUILD railroad-0.5.0-r1.ebuild 557 RMD160 6036ca20b796e68cd94fa170192c82f4817ada4d SHA1 875b58915a5fcb9961279dbb20d6f320db7acfa1 SHA256 5172bfe4d6868cd8dc092ef6a77a3e1e4556fc08fddc0ed865aba9ed18fd6243
 EBUILD railroad-0.5.0.ebuild 478 RMD160 5477fecfedd26ab75102c10294c454c527c6eff8 SHA1 1a83230d4c41435f6649ab97b5150f9c36aa9ee1 SHA256 17d3f96fc6acbcf65a0fcd76a7f836d91c6ef48137e1e683163eebe005a47816
-MISC ChangeLog 279 RMD160 25e9c9197c0ff1f88b81b241f7db729305c00459 SHA1 a077d7e826de213000f25ad7cbcc9f5349010405 SHA256 cb41a11381d116b87711ceb47e9c8622b1eb7840d27e845c90d58217e2581d06
+MISC ChangeLog 418 RMD160 3874113e522973d0950e750d2046d8c08ea4a9c2 SHA1 c15df25bf92acfdda6a9b199c1b5a0ed21214248 SHA256 918703822640e7550da25b0aa12d79b4d804d1ad602f5ab813bd363c694fb020
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAks3taMACgkQeM7EJeUH71Px7ACghW0Qw2rsgO8MR+8jCaxQerq3
-rqYAnRShWxZACY1bZPq+Zi+sYpuMzHgz
-=1GLx
+iF4EAREIAAYFAkxlVbUACgkQZihJkut28Stw5QEA1QYqgvBllNIlEIXq4PMZIiBV
+DTMXckTgdNFZkBnqp1oA/ix1Za8ndGk6evM+/aodSCHO7gn15gqCc+/MVWBH+Qbb
+=p26L
 -----END PGP SIGNATURE-----
