@@ -1,5 +1,10 @@
 # ChangeLog for dev-ruby/railroad
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+
+*railroad-0.5.0-r1 (13 Aug 2010)
+
+  13 Aug 2010; Hans de Graaff <graaff@gentoo.org> +railroad-0.5.0-r1.ebuild:
+  Convert to ruby-fakegem.
 
   27 Dec 2009; Hans de Graaff <graaff@gentoo.org> -railroad-0.4.0.ebuild:
   Remove old version.
